crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__build_info.snap
---
source: src/models/replay/snapshot_tests.rs
expression: replay.build
---
{
  "of_core": "0.1.0",
  "gdext": "0.6.0",
  "build_tag": "abc1234"
}
