crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__event_0_pass.snap
---
source: src/models/replay/snapshot_tests.rs
expression: event
---
{
  "etype": "pass",
  "t": 120.5,
  "minute": 2,
  "team": "HOME",
  "player_id": "H7",
  "pos": {
    "x": 45.0,
    "y": 30.0
  },
  "vel": {
    "x": 5.0,
    "y": 0.0
  },
  "end_pos": {
    "x": 55.0,
    "y": 35.0
  },
  "receiver_id": "H9",
  "ground": true,
  "ball": {
    "from": {
      "x": 45.0,
      "y": 30.0
    },
    "to": {
      "x": 55.0,
      "y": 35.0
    },
    "speed_mps": 15.0,
    "curve": "none"
  },
  "outcome": "complete"
}
