crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__event_3_foul.snap
---
source: src/models/replay/snapshot_tests.rs
expression: event
---
{
  "etype": "foul",
  "t": 892.3,
  "minute": 15,
  "team": "AWAY",
  "player_id": "A5",
  "pos": {
    "x": 25.0,
    "y": 40.0
  },
  "opponent_id": "H6",
  "card": "yellow"
}
