crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__event_distribution.snap
---
source: src/models/replay/snapshot_tests.rs
expression: distribution
---
{
  "total": 6,
  "major": 1,
  "important": 3,
  "all": 2,
  "shots": 1,
  "passes": 1,
  "dribbles": 1,
  "tackles": 0,
  "fouls": 1,
  "saves": 0,
  "set_pieces": 1,
  "substitutions": 1
}
